--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
               <input type="password" name="passwordConfirm" required minlength="6" placeholder="confirm password">
             </div>
             <div>
-              <button type="submit" class="btn btn-outline-success">Sign Up</button>
+              <button type="submit" class="btn btn-outline-success">Create Account</button>
             </div>
           </form>
         </div>
